src/css/gallery.css
.gallery-title {
  margin-bottom: 9px;
  font-size: 20px;
}
.gallery-subtitle {
  margin-bottom: 24px;
}
.gallery-list-wrapper {
  display: flex;
  flex-direction: column;
  gap: 12px;
}
.gallery-img {
  border: 3px solid #9c76f3;
  border-radius: 40px;
  max-width: 311px;
  width: 100%;
  height: auto;
}
.gallery-left-list-img {
  display: flex;
  flex-direction: column;
  gap: 12px;
}
.gallery-right-list-img {
  display: flex;
  flex-direction: column;
  gap: 12px;
}
@media screen and (min-width: 1440px) {
  .gallery-title {
    font-size: 40px;
    -webkit-text-stroke: 8px #813d06;
    margin-bottom: 17px;
  }
  .gallery-subtitle {
    font-size: 24px;
    margin-bottom: 40px;
  }

  .gallery-list-wrapper {
    flex-direction: row;
  }
  .gallery-img {
    border: 8px solid #9c76f3;
    min-width: 405px;
    width: 100%;
    height: 280px;
  }
  .big-img {
    min-width: 842px;
    height: auto;
    width: 100%;
  }
  .gallery-left-list-img {
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 32px;
    row-gap: 20px;
  }
  .gallery-right-list-img {
    gap: 20px;
  }
}

